<resources>
    <string name="app_name">Musichand Companion</string>
    <string name="welcome">Welcome!</string>
    <string name="musichandver">To Musichand version 1.0.5</string>
    <string name="on_off">Bluetooth On/Off!</string>
    <string name="list_devices">Discover Devices!</string>
    <string name="select">Select!</string>
    <string name="bt_selected_text">Selected: </string>
    <string name="bt_selected">NONE</string>
    <string name="select_button">Select!</string>
    <string name="select_text">Please select an instrument!</string>
    <string name="instrument_selection_text">Selected Instrument:</string>
    <string name="right_selection_text">Selected Right Device:</string>
    <string name="left_selection_text">Selected Left Device:</string>
    <string name="instrument_selection">NONE</string>
    <string name="wip">[WIP]</string>
    <string name="instrument_bass">Bass</string>
    <string name="instrument_cello">Cello</string>
    <string name="instrument_djembe">Djembe</string>
    <string name="instrument_drums">Drums</string>
    <string name="instrument_guitar">Guitar</string>
    <string name="instrument_maracas">Maracas</string>
    <string name="instrument_piano">Piano</string>
    <string name="instrument_tambourine">Tambourine</string>
    <string name="instrument_violin">Violin</string>
    <string name="selection_done">Done</string>
    <string name="main_selected_instrument">NONE</string>
    <string name="bt_right_device">NONE</string>
    <string name="bt_left_device">NONE</string>
    <string name="play">PLAY!</string>
    <string name="enjoy">Enjoy playing!</string>
    <string name="two_handed">Mode: Two-Handed</string>
    <string name="left_handed">Mode: Left-Handed</string>
    <string name="right_handed">Mode: Right-Handed</string>
    <string name="reset">RESET APP</string>
    <string name="please_reset">Error occurred, please use reset button.</string>
</resources>
