<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/totalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/musichandver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:textSize="12sp"
            android:text="@string/musichandver"/>

        <TextView
            android:id="@+id/selectedInstrumentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/instrument_selection_text"/>

        <TextView
            android:id="@+id/selectedInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/main_selected_instrument"
            android:layout_toRightOf="@id/selectedInstrumentText"
            android:layout_toEndOf="@id/selectedInstrumentText"/>

        <Button
            android:id="@+id/selectInstrumentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedInstrumentText"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/select_button" />

        <TextView
            android:id="@+id/selectedRightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/right_selection_text"
            android:layout_below="@id/selectInstrumentButton"/>

        <TextView
            android:id="@+id/selectedRightBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bt_right_device"
            android:layout_below="@id/selectInstrumentButton"
            android:layout_toRightOf="@id/selectedRightText"
            android:layout_toEndOf="@id/selectedRightText"/>

        <Button
            android:id="@+id/selectRightDeviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedRightText"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/select_button" />

        <TextView
            android:id="@+id/selectedLeftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/left_selection_text"
            android:layout_below="@id/selectRightDeviceButton"/>

        <TextView
            android:id="@+id/selectedLeftBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bt_left_device"
            android:layout_below="@id/selectRightDeviceButton"
            android:layout_toRightOf="@id/selectedLeftText"
            android:layout_toEndOf="@id/selectedLeftText"/>

        <Button
            android:id="@+id/selectLeftDeviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_button"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/selectedLeftText"/>

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_below="@id/selectLeftDeviceButton"
            android:layout_marginTop="50dp"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>