<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ConnectionActivity">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/buttonLayoutOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/onOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_off"
                style="?android:attr/buttonBarButtonStyle"/>


            <Button
                android:id="@+id/listButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_devices"
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <TextView
            android:id="@+id/bt_selected_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/bt_selected_text"
            android:layout_below="@id/buttonLayoutOne"
            android:visibility="invisible"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_selected_text"
            android:layout_alignBottom="@+id/bt_selected_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/bt_selected_text"
            android:layout_toRightOf="@+id/bt_selected_text"
            android:text="@string/bt_selected"
            android:layout_below="@+id/buttonLayoutOne"
            android:visibility="invisible"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_below="@+id/bt_selected_text" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceList"
            android:text="@string/select"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>